# html-ingestor

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/html_ingestor/: __init__.py  core.py
src/html_ingestor/parsers/: html_parser.py
tests/: __init__.py  test_core.py  test_html_scraper.py
