[tool.poetry]
name = "html-ingestor"
version = "0.1.0"
description = "Ingest HTML documents preserving semantic structure to generate RAG-friendly input documents and chunks."
authors = ["Francis Beeson <leobeeson@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leobeeson/html-ingestor"
homepage = "https://github.com/leobeeson/html-ingestor"
keywords = ["html", "rag", "semantic", "chunking", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages = [
    { include = "html_ingestor", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=html_ingestor --cov-report=term-missing"
